--- a/src/components/Todo/TodoModal/EditModal/EditModal.css
+++ b/src/components/Todo/TodoModal/EditModal/EditModal.css
@@ -24,10 +24,9 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border: 2px solid black;
-    background-color: #e8eaec;
+    background-color: #e8eaec;;
     align-content: center;
 }
-
 
 .modal-input {
     width:70%;
@@ -36,17 +35,7 @@
     border: 1px solid black;
 }
 
-.modal-button {
-    
-    margin: 5px;
-    background-color: #44c867;
-    height: 50px;
-    color: #000000;
-    cursor: pointer;
-    border: 1px solid black;
-    margin-left: 3px;
-    bottom: 0;
-}
+
 
 .modal-button:hover {
   background-color: #26783a;
@@ -70,3 +59,17 @@
     cursor: pointer;
     transform: scale(1.1);
 }
+
+.edit-entry-form {
+    padding: 10px;
+    max-height: 80vh;
+    overflow: auto;
+    overflow-x: hidden;
+   
+}
+
+.save-button-div {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}   
