--- a/src/components/Todo/TodoModal/TodoModal.css
+++ b/src/components/Todo/TodoModal/TodoModal.css
@@ -33,6 +33,12 @@
     border-radius: 10px;
 }
 
+.create-modal-name-input,
+.create-modal-input-description {
+    min-height: 36px; /* adjust this value as needed */
+    flex-shrink: 0;
+}
+
 .modal-input-date{
     width:100%;
     height: 36px;
@@ -51,13 +57,9 @@
 }
 
 .modal-button {
-    background-color: #44c867;
-    height: 50px;
-    color: #000000;
-    cursor: pointer;
-    border: 1px solid black;
-    margin-left: 3px;
+    min-height: 50px;
 }
+
 
 .modal-button:hover {
   background-color: #26783a;
@@ -91,10 +93,16 @@
   }
 
   /* Form */
-.edit-entry-form {
+.create-entry-form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-  
+.create-entry-form {
+    padding: 10px;
+    max-height: 80vh;
+    overflow: auto;
+    overflow-x: hidden;
+   
+}
